Updated mobilenet version

--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
     <!-- Load the latest version of TensorFlow.js -->
     <title>Example of Image Classification using knn-classifier </title>
     <script src="https://unpkg.com/@tensorflow/tfjs"></script>
-    <script src="https://unpkg.com/@tensorflow-models/mobilenet"></script>
+    <script src="https://unpkg.com/@tensorflow-models/mobilenet@2.0.2"></script>
     <script src="https://unpkg.com/@tensorflow-models/knn-classifier"></script>
   </head>
   <body>
